Final project/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: nginx:alpine # Тимчасовий імедж, поки ви не зберете свій Python-образ у CI/CD
          ports:
            - containerPort: 5000
