Final project/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
